--- a/package.json
+++ b/package.json
@@ -18,6 +18,18 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/supabase-js": "^2.49.4",
+    "@tiptap/extension-highlight": "^3.8.0",
+    "@tiptap/extension-image": "^3.8.0",
+    "@tiptap/extension-link": "^3.8.0",
+    "@tiptap/extension-placeholder": "^3.8.0",
+    "@tiptap/extension-table": "^3.8.0",
+    "@tiptap/extension-table-cell": "^3.8.0",
+    "@tiptap/extension-table-header": "^3.8.0",
+    "@tiptap/extension-table-row": "^3.8.0",
+    "@tiptap/extension-task-item": "^3.8.0",
+    "@tiptap/extension-task-list": "^3.8.0",
+    "@tiptap/react": "^3.8.0",
+    "@tiptap/starter-kit": "^3.8.0",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.4",
@@ -35,6 +47,7 @@
     "i18next": "^24.2.1",
     "lucide-react": "^0.344.0",
     "node-html-parser": "^7.0.1",
+    "novel": "^1.0.2",
     "puppeteer": "^24.6.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
