--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/supabase-js": "^2.49.4",
+    "@tiptap/core": "^3.9.1",
     "@tiptap/extension-highlight": "^3.8.0",
     "@tiptap/extension-image": "^3.8.0",
     "@tiptap/extension-link": "^3.8.0",
@@ -28,6 +29,7 @@
     "@tiptap/extension-table-row": "^3.8.0",
     "@tiptap/extension-task-item": "^3.8.0",
     "@tiptap/extension-task-list": "^3.8.0",
+    "@tiptap/pm": "^3.9.1",
     "@tiptap/react": "^3.8.0",
     "@tiptap/starter-kit": "^3.8.0",
     "@types/react-beautiful-dnd": "^13.1.8",
