--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/supabase-js": "^2.49.4",
     "@tiptap/core": "^3.9.1",
+    "@tiptap/extension-color": "^3.10.1",
     "@tiptap/extension-highlight": "^3.10.1",
     "@tiptap/extension-horizontal-rule": "^3.10.1",
     "@tiptap/extension-image": "^3.10.1",
@@ -37,6 +38,7 @@
     "@tiptap/extension-task-item": "^3.8.0",
     "@tiptap/extension-task-list": "^3.8.0",
     "@tiptap/extension-text-align": "^3.10.1",
+    "@tiptap/extension-text-style": "^3.10.1",
     "@tiptap/extension-typography": "^3.10.1",
     "@tiptap/extension-underline": "^3.10.1",
     "@tiptap/extensions": "^3.10.1",
