--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "rollup-plugin-polyfill-node": "^0.13.0",
+    "sass": "^1.93.3",
     "sass-embedded": "^1.93.3",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.4.1",
