--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "i18next": "^24.2.1",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.344.0",
+    "mammoth": "^1.11.0",
     "node-html-parser": "^7.0.1",
     "puppeteer": "^24.6.0",
     "react": "^18.3.1",
